<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFB9B9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:gravity="center|top"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/nameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:backgroundTint="#750D0D"
        android:onClick="openEnterName"
        android:text="@string/username" />

    <Button
        android:id="@+id/playBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:backgroundTint="#750D0D"
        android:onClick="openGame"
        android:text="@string/play" />

    <Button
        android:id="@+id/standingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:backgroundTint="#750D0D"
        android:onClick="openStandings"
        android:text="@string/standings" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:text="@string/switch1"
        android:textAlignment="center"
        android:textSize="24sp" />
</LinearLayout>